force-app/main/default/objects/CommercientSF__ArInvoice__c/CommercientSF__ArInvoice__c.object-meta.xml
<CustomObject>
    <label>Syspro Invoice</label>
    <nameField>
        <label>Syspro Invoice</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Syspro Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>