force-app/main/default/objects/CommercientSF__ArInvoice__c/fields/CommercientSF__AccMulDiv__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__AccMulDiv__c</fullName>
    <label>Account multiply or divide</label>
    <length>255</length>
    <type>Text</type>
</CustomField>