force-app/main/default/objects/CommercientSF__ArInvoice__c/fields/CommercientSF__Account__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Syspro Invoices</relationshipLabel>
    <relationshipName>ArInvoices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>