force-app/main/default/objects/CommercientSF__ArInvoice__c/fields/CommercientSF__ConvRate__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ConvRate__c</fullName>
    <label>Exchange rate conversion</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>