force-app/main/default/objects/CommercientSF__ArInvoice__c/fields/CommercientSF__CurrencyValue__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CurrencyValue__c</fullName>
    <label>Original invoice amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>