force-app/main/default/objects/CommercientSF__ArInvoice__c/fields/CommercientSF__DueDate__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DueDate__c</fullName>
    <label>DueDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>