force-app/main/default/objects/CommercientSF__ArInvoice__c/fields/CommercientSF__FixExchangeRate__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__FixExchangeRate__c</fullName>
    <label>Fixed exchange rate flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>