force-app/main/default/objects/CommercientSF__ArInvoice__c/fields/CommercientSF__HowOld__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__HowOld__c</fullName>
    <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HowOld</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>