force-app/main/default/objects/CommercientSF__ArInvoice__c/fields/CommercientSF__InvoiceBal1__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__InvoiceBal1__c</fullName>
    <label>Invoice balance1</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>