force-app/main/default/objects/CommercientSF__ArInvoice__c/fields/CommercientSF__InvoiceBal2__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__InvoiceBal2__c</fullName>
    <label>Invoice balance2</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>