force-app/main/default/objects/CommercientSF__ArInvoice__c/fields/CommercientSF__InvoiceBal3__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__InvoiceBal3__c</fullName>
    <label>Invoice balance3</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>