force-app/main/default/objects/CommercientSF__ArInvoice__c/fields/CommercientSF__InvoiceYear__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__InvoiceYear__c</fullName>
    <label>Year in which invoice posted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>