force-app/main/default/objects/CommercientSF__ArInvoice__c/fields/CommercientSF__LastDelNote__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__LastDelNote__c</fullName>
    <label>Last delivery note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>