force-app/main/default/objects/CommercientSF__ArInvoice__c/fields/CommercientSF__MonthInvBalZero__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MonthInvBalZero__c</fullName>
    <label>Month when inv bal became zero</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>