force-app/main/default/objects/CommercientSF__ArInvoice__c/fields/CommercientSF__MulDiv__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MulDiv__c</fullName>
    <label>Multiply or divide</label>
    <length>255</length>
    <type>Text</type>
</CustomField>