force-app/main/default/objects/CommercientSF__ArInvoice__c/fields/CommercientSF__NextPaymEntry__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__NextPaymEntry__c</fullName>
    <label>Next payment entry number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>