force-app/main/default/objects/CommercientSF__ArInvoice__c/fields/CommercientSF__NextRevalNo__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__NextRevalNo__c</fullName>
    <label>Next revaluation number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>