force-app/main/default/objects/CommercientSF__ArInvoice__c/fields/CommercientSF__PodEntryDate__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__PodEntryDate__c</fullName>
    <label>POD entry date</label>
    <type>Date</type>
</CustomField>