force-app/main/default/objects/CommercientSF__ArInvoice__c/fields/CommercientSF__PodReference__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__PodReference__c</fullName>
    <label>POD reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>