force-app/main/default/objects/CommercientSF__ArInvoice__c/fields/CommercientSF__PostCurrency__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__PostCurrency__c</fullName>
    <label>Posting currency code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>