force-app/main/default/objects/CommercientSF__ArInvoice__c/fields/CommercientSF__ProofOfDelivery__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ProofOfDelivery__c</fullName>
    <label>Proof of delivery</label>
    <length>255</length>
    <type>Text</type>
</CustomField>