force-app/main/default/objects/CommercientSF__ArInvoice__c/fields/CommercientSF__RetentionInv__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__RetentionInv__c</fullName>
    <label>Retention invoice for P&amp;C</label>
    <length>255</length>
    <type>Text</type>
</CustomField>