force-app/main/default/objects/CommercientSF__ArInvoice__c/fields/CommercientSF__Salesperson__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Salesperson__c</fullName>
    <label>Salesperson code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>