force-app/main/default/objects/CommercientSF__ArInvoice__c/fields/CommercientSF__StoreNumber__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__StoreNumber__c</fullName>
    <label>Store number from subaccount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>