force-app/main/default/objects/CommercientSF__ArInvoice__c/fields/CommercientSF__TaxPortion__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TaxPortion__c</fullName>
    <label>Tax portion of current balance</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>