force-app/main/default/objects/CommercientSF__ArInvoice__c/fields/CommercientSF__TblArTerms__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TblArTerms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Syspro AR Terms</label>
    <referenceTo>CommercientSF__TblArTerms__c</referenceTo>
    <relationshipLabel>Syspro Invoices</relationshipLabel>
    <relationshipName>Syspro_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>