force-app/main/default/objects/CommercientSF__ArInvoice__c/fields/CommercientSF__TriangCurrency__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TriangCurrency__c</fullName>
    <label>Triangulation currency code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>