force-app/main/default/objects/CommercientSF__ArInvoice__c/fields/CommercientSF__TriangRate__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TriangRate__c</fullName>
    <label>Triangulation rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>