force-app/main/default/objects/CommercientSF__ArInvoice__c/listViews/CommercientSF__All.listView-meta.xml
<ListView>
    <fullName>CommercientSF__All</fullName>
    <columns>NAME</columns>
    <columns>CommercientSF__Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>